// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders with default values 1`] = `
<DocumentFragment>
  <h2
    style="font-weight: bold; margin: 0px 0px 0.5em 0px; font-size: 19px; line-height: 1.15;"
  />
</DocumentFragment>
`;

exports[`Heading renders with style 1`] = `
<DocumentFragment>
  <h1
    style="color: rgb(16, 16, 16); background-color: rgb(68, 67, 51); font-weight: normal; text-align: center; margin: 0px 0px 0.5em 0px; font-family: Bahnschrift, "DIN Alternate", "Franklin Gothic Medium", "Nimbus Sans Narrow", sans-serif-condensed, sans-serif; font-size: 24px; padding: 15px 8px 10px 24px; line-height: 1.15;"
  >
    Hello world!
  </h1>
</DocumentFragment>
`;
